@@ -1,1 +1,5 @@
-Main Theme sections
+********************************************************
+
+  Core framework sections
+
+********************************************************
